# libectool

./: CMakeLists.txt  README.md  pyproject.toml
.github/workflows/: build.yml  pip.yml
pyectool/: __init__.py  __init__.pyi
src/: CMakeLists.txt  ectool_fanctrl.cc
src/bindings/: CMakeLists.txt  ECController.cc  ECController.h  PyECController.cc  libectool_py.cc
src/core/: CMakeLists.txt  ectool_fanctrl.cc  ectool_wrapper.cc  libectool.cc  libectool.h
src/include/: libectool.h
tests/: test_libectool.c  test_pyectool.py
